--- a/Makefile.rules
+++ b/Makefile.rules
@@ -25,7 +25,7 @@ INSTALL = install
 %.a: BASENAME=$(patsubst %.a, %, $@)
 %.a:
 	rm -f $@
-	ar clqv $@ $^
+	ar cqv $@ $^
 	ranlib $@
 
 # dynamic libraries
