--- a/Makefile.targets
+++ b/Makefile.targets
@@ -12,6 +12,7 @@ libcoqcic_SOURCES = \
 	coqcic/sexpr.cc \
 	coqcic/to_sexpr.cc \
 	coqcic/mainpage.cc \
+	coqcic/minigallina.cc \
 
 libcoqcic_HEADERS = \
 	coqcic/constr.h \
@@ -27,6 +28,7 @@ libcoqcic_HEADERS = \
 	coqcic/to_sexpr.h \
 	coqcic/visitor.h \
 	coqcic/sexpr.h \
+	coqcic/minigallina.h \
 
 libcoqcic_TESTS = \
 	coqcic/constr_test \
@@ -35,6 +37,7 @@ libcoqcic_TESTS = \
 	coqcic/lazy_stack_test \
 	coqcic/lazy_stackmap_test \
 	coqcic/normalize_test \
+	coqcic/minigallina_test \
 	coqcic/parse_sexpr_test \
 	coqcic/simpl_test \
 	coqcic/to_sexpr_test \
