Build unit tests as part of default compilation target
Compile unit tests by default. This provides more reasonable compilation
coverage for the commonly built default target.

--- a/Makefile.rules
+++ b/Makefile.rules
@@ -3,7 +3,7 @@ COVERAGE_EXECUTABLES += $(COVERAGE_TESTS)
 
 EXECUTABLES += $(TARGET_EXECUTABLES) $(TEST_EXECUTABLES) $(COVERAGE_EXECUTABLES)
 
-all: $(SHARED_LIBRARIES) $(STATIC_LIBRARIES) $(TARGET_EXECUTABLES)
+all: $(SHARED_LIBRARIES) $(STATIC_LIBRARIES) $(TARGET_EXECUTABLES) $(TEST_EXECUTABLES)
 
 # commands for generating various types of targets
 
