doc: various classes and de Bruijn indices
Add doxygen annotations to a lot of classes, move documentation to
header file, write page about de Bruijn indices.

--- a/Makefile.targets
+++ b/Makefile.targets
@@ -2,6 +2,7 @@ default: all
 
 libcoqcic_SOURCES = \
 	coqcic/constr.cc \
+	coqcic/debruijn.cc \
 	coqcic/fix_specialize.cc \
 	coqcic/from_sexpr.cc \
 	coqcic/normalize.cc \
